--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Get code
         # want to use an action
-        uses: action/checkout@v3 #lock version
+        uses: actions/checkout@v3 #lock version
       - name: Install NodeJs
         uses: actions/setup-node@v3
         with:
