--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test project
 on: push
 jobs:
-# jobs in parralel
+# jobs in parralel by default
   test:
   # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -18,6 +18,7 @@ jobs:
       - name: Run test
         run: npm test
   deploy:
+    needs: test # to launch this job after previous one
     runs-on: ubuntu-latest
     steps:
       - name: Get code
