--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run test
-        run: npm test
+        run: npm run test
   deploy:
     needs: test # to launch this job after previous one
     runs-on: ubuntu-latest
